--- a/MySampleAPI.csproj
+++ b/MySampleAPI.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="15.0.4" />
     <PackageReference Include="MongoDB.Driver" Version="2.10.2" />
+    <PackageReference Include="QRCoder" Version="1.3.9" />
   </ItemGroup>
 
 
